gobmkida/c1/is_illegal_ko_capture
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/is_illegal_ko_capture/src/engine/board.c:1621:37: error: use of undeclared identifier 'byte_9AA89F'
if ( 3 - color != ( unsigned __int8)byte_9AA89F[pos] ) 
                                    ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/is_illegal_ko_capture/src/obj/1/board.o] Error 1
